Подновил тексты, лого соцсетей

--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+    <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Сайт Игролаба</title>
+        <title>
+            Сайт Игролаба
+        </title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/0e49566c.main.css"/>
+        <meta name="viewport" content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="stylesheet" href="styles/main.css"/>
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
-
-        <link href="http://fonts.googleapis.com/css?family=Arimo&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Arimo&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp;22 декабря</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp;28 декабря</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Что мы делаем, зачем и почему</a></li>
+                    <li>
+                        <a href="#">&nbsp;22 декабря</a>
+                    </li>
+                    <li>
+                        <a href="#">&nbsp;28 декабря</a>
+                    </li>
+                    <li>
+                        <a href="#">&nbsp;Что мы делаем, зачем и почему</a>
+                    </li>
                 </ul>
-                <h3 class="text-muted">Игролаб</h3>
+                <h3 class="text-muted">
+                    Игролаб
+                </h3>
             </div>
         </div>
-
         <div class="row girl-background">
             <div class="container">
                 <div class="row">
@@ -39,51 +46,63 @@
                         <div class="glass-screen row">
                             <!-- <h1>'Allo, 'Allo!</h1> -->
                             <div class="col-sm-12">
-                                <h2 class="center-block center noident">15 игр для девочек&nbsp;и&nbsp;мальчиков от&nbsp;5&nbsp;до&nbsp;75&nbsp;лет</h2>
+                                <h2 class="center-block center noident">
+                                    15 игр для девочек&nbsp;и&nbsp;мальчиков от&nbsp;5&nbsp;до&nbsp;75&nbsp;лет
+                                </h2>
                             </div>
-                            <p class="col-sm-12 lead">Мы научим новым и хорошо забытым старым играм детей и их родителей. По одной игре на каждый день зимних каникул и карта-путеводитель по правилам, с которой вы выберете игру под настроение, погоду и состав компании за две минуты.</p>
-                            <p class="col-sm-12">
+                            <p class="col-sm-12 call">
+                                Мы научим детей и их родителей (или напомним им, как) прыгать в резиночки, играть в “тапочки”, “классики” и еще в дюжину разных игр — по одной на каждый день грядущих зимних каникул.
+                            </p>
+                            <p class="col-sm-12 call-button">
                                 <a class="btn btn-lg btn-success center-block" href="#">Записаться на игровой марафон</a>
                             </p>
-                            <p class="col-sm-12">Игромарафон поможет весело провести время вместе и научит новому. За час активных игр во дворе дизайн-завода “Флакон” вместе с ведущим. Родители оставить ребенка в компании играющих и пойти выбирать новогодние подарки на зимнем фестивале, которая проходит в эти дни на Флаконе, или присоединиться к игре. </p>
-                            <p class="col-sm-12">Всем участникам в конце останется карта-путеводитель, которая поможет быстро выбрать подходящую игру потом и напомнит, что вы выучили за час. С нами оба дня будет репортажный фотограф, фотографии потом будут доступны через интернет.</p>
+                            <p class="col-sm-12 call">
+                                Мы проводим игровой марафон 22 и 28 декабря с 12 до 16 часов сеансами по часу на “Флаконе” (м. Дмировская). Цена — 300 рублей.
+                            </p>
+                            <h4 class="col-sm-12">
+                                Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 15 минут времени у 95% людей) и получите скидку 100 рублей.
+                            </h4>
+                            <p class="col-sm-12"></p>
                         </div>
                     </div>
                 </div>
-                <div class="glass-screen row">
-                    <div class="col-sm-12">
-                        <h4>Мы проводим игровой марафон 22 и 28 декабря с 12 до 16 часов на “Флаконе” (м. Дмировская, схема).
-                        <p>Участие стоит 300 рублей.</p>
-                        <p>Нам важно узнать больше о тех, для кого мы работаем, чтобы стать лучше. <a class="link" href="#">Заполните анкету</a> и получите скидку 100 рублей.</p>
-                    </h4></div>
-                </div>
             </div>
         </div>
-        
         <div class="container">
             <div class="row marketing">
                 <div class="col-md-9">
-                    <h4>Проверено на практике</h4>
-                    <p>Каждую из игр мы опробовали в 2-5 вариантах. В том числе на своих подопечных детях от 8 до 19 лет и их друзьях от 5 с половиной до 61.</p>
-
-                    <h4>Безопасно</h4>
-                    <p>Наши ведущие — это студенты МПГУ, которых дополнительно подготовил и обучил детский психолог.</p>
-
-                    <h4>Полезно</h4>
-                    <p>До и после игры мы проводим небольшой психологический тест для оценки влияния игры на ребенка или вас самих.</p>
-
-                    <h4>Нужно детям</h4>
-                    <p>Игры разные, он тренируют физическую активность, координацию, коммуникацию, память — это нужно детям, которые много учатся и сидят за компьютером. У х% детей недостаток движения.</p>
-
-                    <h4>Игра — это серьезно</h4>
-                    <p>Психологи считают игру очень важной. Игру совместную особенно.</p>
-
-                    <h4>Команда</h4>
-                    <p>У нас в команде <a class="link" href="#">психолог</a> и <a class="link" href="#">создатель мульт-сериала</a>. И четыре педагога-затейника — два прошлых и два будущих.</p>
-                    
+                    <h4>
+                        Весело
+                    </h4>
+                    <p>
+                        Эффект игромарафона мы проверяем на практике уже пять лет. Мы играем с нашими подопечными, родными и знакомыми от 5 до 75 лет. Они улыбаются и азартно соревнуются за результат, независимо от пола и возраста. Короткие психологические тесты до и после игр показывают: настроение улучшается у 87% участников. Игромарафон поможет вам с семьей и друзьями повеселиться накануне Нового года.
+                    </p>
+                    <h4>
+                        Полезно
+                    </h4>
+                    <p>
+                        Игры развивают, а не только развлекают. 60% школьников двигаются меньше рекомендованной врачами нормы, а учителя и школьные психологи на первое место ставят проблемы с вниманием и общением. Физическую форму подтянут “резиночки”, лянга и “классики”. “Колечко” или “тапочки” тренируют концентрацию и социальное взаимодействие. А с картой-путеводителем по правилам игр ребенок подберет забаву под настроение, погоду и состав компании за две минуты и через полгода. Игромарафон еще пригодится вам на зимних каникулах, в школе и летом.
+                    </p>
+                    <h4>
+                        Удобно
+                    </h4>
+                    <p>
+                        До дизайн-завода “Флакон” 10 минут пешком от метро Дмитровская и 15 минут на машине от Пушкинской площади (правда, если нет пробок). В декабре на Флаконе <a href="http://flacon.ru/events/flacon/zima-naflakone/" target="_blank" class="link">зимний фестиваль</a>, мастер-классы и ярмарка подарков. Оставить ребенка играть и пойти выбирать подарки или веселиться вместе одинаково удобно.
+                    </p>
+                    <h4>
+                        Безопасно
+                    </h4>
+                    <p>
+                        С нами на площадке два аниматора, психолог, педагог и горячий чай. Ребенок не пропадет.
+                    </p>
+                    <h4>
+                        Впрок
+                    </h4>
+                    <p>
+                        Игромарафон не пройдет бесследно. Мы выдаем участникам карту-путеводитель по правилам игр, оба дня с нами будет работать репортажный фотограф, а еще наш партнер — мультсериал “Новаторы” — обещал сувениры для самых ловких. Приходите и играйте!
+                    </p>
                 </div>
             </div>
-
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -94,32 +113,34 @@
                     </div>
                 </div>
                 <div class="row">
-                    <h3 class="center">+7&nbsp;916&nbsp;655&nbsp;96&nbsp;73</h3>
+                    <div class="center">
+                        <h3 id="hcard-Валентина" class="vcard">
+                            <span class="tel">+7&nbsp;(916)&nbsp;655–96–73</span> <span class="fn n"><span class="given-name">Валентина</span></span>
+                        </h3>
+                    </div>
                     <div class="row">
                         <p class="lead col-sm-3 col-sm-offset-3 center">
-                            <a class="link" href="#">Группа&nbsp;ВК</a>
+                            <img src="/images/d56ed49d.vk.png" alt="Группа ВК" class="network-logo"><a class="link" href="#">Группа&nbsp;ВК</a>
                         </p>
-                        <p class="lead col-sm-2 center center-block">
-                            <a class="link" href="#">Группа&nbsp;FB</a>
+                        <p class="lead col-sm-3 center">
+                            <img src="/images/dff5e5d1.fb.png" alt="Группа FB" class="network-logo"><a class="link" href="#">Группа&nbsp;FB</a>
                         </p>
                     </div>
                 </div>
             </div>
-
             <div class="footer">
                 <div class="row">
-                    <p class="col-md-6">Если вам хочется чего-то тихого и спокойного, а не прыжков в резиночки, возможно, вам подойдут <a class="link" href="#">мастер-классы по народной кукле.</a></p>
-                    <p class="col-md-6">Вообще никуда не хочется ходить? Пройдите <a class="link" href="#">психологический тест по подбору игр</a>.</p>
+                    <p class="col-md-6">
+                        Если вам хочется чего-то тихого и спокойного, а не прыжков в резиночки, возможно, вам подойдут <a class="link" href="#">мастер-классы по народной кукле.</a>
+                    </p>
+                    <p class="col-md-6">
+                        Вообще никуда не хочется ходить? Пройдите <a class="link" href="#">тест по подбору игр</a>.
+                    </p>
                 </div>
             </div>
-
-        </div>
-
-
         <script src="scripts/dbd26eaf.vendor.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<!-- 
+        <!-- 
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -129,9 +150,7 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 -->
-
         <script src="scripts/b6c3df09.main.js"></script>
-
         <script src="scripts/20bdd8fe.plugins.js"></script>
-</body>
+    </body>
 </html>
