--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/main.css"/>
+        <link rel="stylesheet" href="styles/9f2e7f0e.main.css"/>
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
         <link href="http://fonts.googleapis.com/css?family=Arimo&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
     </head>
