--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li>
-                        <a href="#">&nbsp;22 декабря</a>
+                        <a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp;22 декабря</a>
                     </li>
                     <li>
-                        <a href="#">&nbsp;28 декабря</a>
+                        <a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp;28 декабря</a>
                     </li>
                     <li>
-                        <a href="#">&nbsp;Что мы делаем, зачем и почему</a>
+                        <a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Что мы делаем, зачем и почему</a>
                     </li>
                 </ul>
                 <h3 class="text-muted">
