Новые даты и ссылки на timepad

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp;22 декабря</a>
+                        <a href="https://igrolab.timepad.ru/event/96137/"><span class="glyphicon glyphicon-calendar"></span>&nbsp;21 декабря</a>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp;28 декабря</a>
+                        <a href="https://igrolab.timepad.ru/event/96138/"><span class="glyphicon glyphicon-calendar"></span>&nbsp;22 декабря</a>
                     </li>
                     <li>
                         <a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Что мы делаем, зачем и почему</a>
@@ -54,10 +54,10 @@
                                 Мы научим детей и их родителей (или напомним им, как) прыгать в резиночки, играть в “тапочки”, “классики” и еще в дюжину разных игр — по одной на каждый день грядущих зимних каникул.
                             </p>
                             <p class="col-sm-12 call-button">
-                                <a class="btn btn-lg btn-success center-block" href="#">Записаться на игровой марафон</a>
+                                <a class="btn btn-lg btn-success center-block" href="https://igrolab.timepad.ru/event/96137/">Записаться на игровой марафон</a>
                             </p>
                             <p class="col-sm-12 call">
-                                Мы проводим игровой марафон 22 и 28 декабря с 12 до 16 часов сеансами по часу на “Флаконе” (м. Дмировская). Цена — 300 рублей.
+                                Мы проводим игровой марафон 21 и 22 декабря с 14 до 16 часов сеансами по часу на “Флаконе” (м. Дмировская). Цена — 300 рублей.
                             </p>
                             <h4 class="col-sm-12">
                                 Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 15 минут времени у 95% людей) и получите скидку 100 рублей.
@@ -106,10 +106,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a href="#" class="btn btn-lg btn-success center-block"><span class="glyphicon glyphicon-ok"></span>&nbsp;Зарегистрироваться на 22</a>
+                        <a href="https://igrolab.timepad.ru/event/96137/" class="btn btn-lg btn-success center-block"><span class="glyphicon glyphicon-ok"></span>&nbsp;Зарегистрироваться на 21</a>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" class="btn btn-lg btn-info center-block"><span class="glyphicon glyphicon-ok"></span>&nbsp;Зарегистрироваться на 28</a>
+                        <a href="https://igrolab.timepad.ru/event/96138/" class="btn btn-lg btn-info center-block"><span class="glyphicon glyphicon-ok"></span>&nbsp;Зарегистрироваться на 22</a>
                     </div>
                 </div>
                 <div class="row">
