Ссылки на vk и fb

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                     </div>
                     <div class="row">
                         <p class="lead col-sm-3 col-sm-offset-3 center">
-                            <img src="images/d56ed49d.vk.png" alt="Группа ВК" class="network-logo"><a class="link" href="#">Группа&nbsp;ВК</a>
+                            <img src="images/d56ed49d.vk.png" alt="Группа ВК" class="network-logo"><a class="link" href="https://vk.com/igrolab">Группа&nbsp;ВК</a>
                         </p>
                         <p class="lead col-sm-3 center">
-                            <img src="images/dff5e5d1.fb.png" alt="Группа FB" class="network-logo"><a class="link" href="#">Группа&nbsp;FB</a>
+                            <img src="images/dff5e5d1.fb.png" alt="Группа FB" class="network-logo"><a class="link" href="https://www.facebook.com/groups/igrolab/">Группа&nbsp;FB</a>
                         </p>
                     </div>
                 </div>
