--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="footer">
                 <div class="row">
                     <p class="col-md-6">
-                        Если вам хочется чего-то тихого и спокойного, а не прыжков в резиночки, возможно, вам подойдут <a class="link" href="#">мастер-классы по народной кукле.</a>
+                        Если вам хочется чего-то тихого и спокойного, а не прыжков в резиночки, возможно, вам подойдёт <a class="link" href="http://www.krasniy-klubok.ru/master_class/">мастер-класс по народной кукле.</a>
                     </p>
                     <p class="col-md-6">
                         Вообще никуда не хочется ходить? Пройдите <a class="link" href="#">тест по подбору игр</a>.
