--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>
-            Сайт Игролаба
+            Игролаб — учим играть с детьми
         </title>
-        <meta name="description" content="">
+        <meta name="description" content="Играя, можно учиться, развивать память, реакцию, внимание, ловкость и не только. А чтобы попробовать, что лучше работает для вас, для вашего ребенка — приходите к нам.">
         <meta name="viewport" content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/9f2e7f0e.main.css"/>
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
@@ -62,7 +62,18 @@
                             <h4 class="col-sm-12">
                                 Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 15 минут времени у 95% людей) и получите скидку 100 рублей.
                             </h4>
-                            <p class="col-sm-12"></p>
+                            <p class="col-sm-12">
+                                <script type="text/javascript">(function() {
+                                  if (window.pluso)if (typeof window.pluso.start == "function") return;
+                                  if (window.ifpluso==undefined) { window.ifpluso = 1;
+                                    var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+                                    s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+                                    s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
+                                    var h=d[g]('body')[0];
+                                    h.appendChild(s);
+                                  }})();</script>
+                                <div class="pluso" data-background="transparent" data-options="big,square,line,horizontal,nocounter,theme=04" data-services="vkontakte,facebook,twitter,odnoklassniki,google,livejournal,email" data-user="1341546655"></div>
+                            </p>
                         </div>
                     </div>
                 </div>
