Больше метатегов, исправил p>div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <title>
             Игролаб — учим играть с детьми
         </title>
+
+        <meta name="title" content="Игролаб — учим играть с детьми">
         <meta name="description" content="Играя, можно учиться, развивать память, реакцию, внимание, ловкость и не только. А чтобы попробовать, что лучше работает для вас, для вашего ребенка — приходите к нам.">
+
+        <meta property="og:title" content="Игролаб — учим играть с детьми">
+        <meta property="og:description" content="Играя, можно учиться, развивать память, реакцию, внимание, ловкость и не только. А чтобы попробовать, что лучше работает для вас, для вашего ребенка — приходите к нам.">
+        <meta property="og:url" content="http://igrolab.msk.ru">
+
         <meta name="viewport" content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/9f2e7f0e.main.css"/>
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
@@ -62,7 +69,7 @@
                             <h4 class="col-sm-12">
                                 Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 15 минут времени у 95% людей) и получите скидку 100 рублей.
                             </h4>
-                            <p class="col-sm-12">
+                            <div class="col-sm-12">
                                 <script type="text/javascript">(function() {
                                   if (window.pluso)if (typeof window.pluso.start == "function") return;
                                   if (window.ifpluso==undefined) { window.ifpluso = 1;
@@ -73,7 +80,8 @@
                                     h.appendChild(s);
                                   }})();</script>
                                 <div class="pluso" data-background="transparent" data-options="big,square,line,horizontal,nocounter,theme=04" data-services="vkontakte,facebook,twitter,odnoklassniki,google,livejournal,email" data-user="1341546655"></div>
-                            </p>
+                            </div>
+                            <p class="col-sm-12">&nbsp;</p>
                         </div>
                     </div>
                 </div>
