Добавил страницу с манифестом

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta property="og:url" content="http://igrolab.msk.ru">
 
         <meta name="viewport" content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/9f2e7f0e.main.css"/>
+        <link rel="stylesheet" href="styles/276b0e70.main.css"/>
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
         <link href="http://fonts.googleapis.com/css?family=Arimo&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
     </head>
@@ -38,7 +38,7 @@
                         <a href="https://igrolab.timepad.ru/event/96138/"><span class="glyphicon glyphicon-calendar"></span>&nbsp;22 декабря</a>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Что мы делаем, зачем и почему</a>
+                        <a href="manifest.html"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Что мы делаем, зачем и почему</a>
                     </li>
                 </ul>
                 <h3 class="text-muted">
