Улучшенные тексты, распахнутый robots.txt

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
                                 </h2>
                             </div>
                             <p class="col-sm-12 call">
-                                Мы научим детей и их родителей (или напомним им, как) прыгать в резиночки, играть в “тапочки”, “классики” и еще в дюжину разных игр — по одной на каждый день грядущих зимних каникул.
+                                Мы научим детей и их родителей (или напомним им, как) прыгать в резиночки, играть в “светофор”, “семейку” и еще в дюжину разных игр — по одной на каждый день грядущих зимних каникул.
                             </p>
                             <p class="col-sm-12 call-button">
                                 <a class="btn btn-lg btn-success center-block" href="https://igrolab.timepad.ru/event/96137/">Записаться на игровой марафон</a>
                             </p>
                             <p class="col-sm-12 call">
-                                Мы проводим игровой марафон 21 и 22 декабря с 14 до 16 часов сеансами по часу на “Флаконе” (м. Дмировская). Цена — 300 рублей.
+                                Приходите на игровой марафон 21 и 22 декабря с 12 до 19 часов. Он пройдёт на “<a href="http://flacon.ru/" target="_blank" class="link">Флаконе</a>” (м. Дмитровская), на площадке “Фабрики подарков” (ищите указатель на “Маркет”). Цена — 300 рублей, про&shy;дол&shy;жи&shy;тель&shy;ность сеанса — 1 час.
                             </p>
                             <h4 class="col-sm-12">
-                                Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 15 минут времени у 95% людей) и получите скидку 100 рублей.
+                                Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 10 минут времени) и получите скидку 100 рублей.
                             </h4>
                             <div class="col-sm-12">
                                 <script type="text/javascript">(function() {
@@ -94,31 +94,31 @@
                         Весело
                     </h4>
                     <p>
-                        Эффект игромарафона мы проверяем на практике уже пять лет. Мы играем с нашими подопечными, родными и знакомыми от 5 до 75 лет. Они улыбаются и азартно соревнуются за результат, независимо от пола и возраста. Короткие психологические тесты до и после игр показывают: настроение улучшается у 87% участников. Игромарафон поможет вам с семьей и друзьями повеселиться накануне Нового года.
+                        Эффект игромарафона мы проверяем на практике уже пять лет. Мы играем с нашими подопечными, родными и знакомыми от 5 до 75 лет. Они улыбаются и азартно соревнуются за результат, независимо от пола и возраста. Короткие психологические тесты до и после игр показывают: настроение улучшается у 85% участников. Радостные эмоции, пережитые вместе, всей семьей — отличный новогодний подарок.
                     </p>
                     <h4>
                         Полезно
                     </h4>
                     <p>
-                        Игры развивают, а не только развлекают. 60% школьников двигаются меньше рекомендованной врачами нормы, а учителя и школьные психологи на первое место ставят проблемы с вниманием и общением. Физическую форму подтянут “резиночки”, лянга и “классики”. “Колечко” или “тапочки” тренируют концентрацию и социальное взаимодействие. А с картой-путеводителем по правилам игр ребенок подберет забаву под настроение, погоду и состав компании за две минуты и через полгода. Игромарафон еще пригодится вам на зимних каникулах, в школе и летом.
+                        Игры развивают, а не только развлекают. 60% школьников двигаются меньше рекомендованной врачами нормы, а учителя и школьные психологи на первое место ставят проблемы с вниманием и общением. Физическую форму подтянут “резиночки”, “колечко” или “семейка” тренируют концентрацию и социальное взаимодействие. Освоенные на игромарафоне правила еще не раз пригодятся вам на зимних каникулах, в школе и летом.
                     </p>
                     <h4>
                         Удобно
                     </h4>
                     <p>
-                        До дизайн-завода “Флакон” 10 минут пешком от метро Дмитровская и 15 минут на машине от Пушкинской площади (правда, если нет пробок). В декабре на Флаконе <a href="http://flacon.ru/events/flacon/zima-naflakone/" target="_blank" class="link">зимний фестиваль</a>, мастер-классы и ярмарка подарков. Оставить ребенка играть и пойти выбирать подарки или веселиться вместе одинаково удобно.
+                        До дизайн-завода “Флакон” 10 минут пешком от метро Дмитровская и 15 минут на машине от Пушкинской площади (правда, мы не можем предсказать пробки на эти выходные; мы специализиремся на другом). В декабре на Флаконе <a href="http://flacon.ru/events/flacon/zima-naflakone/" target="_blank" class="link">зимний фестиваль</a>, мастер-классы и ярмарка подарков. Долгий шоппинг обычно утомляет юных членов семьи, и вам будет одинаково удобно сделать перерыв на совместное развлечение или оставить ребенка играть и пойти выбирать подарки.
                     </p>
                     <h4>
                         Безопасно
                     </h4>
                     <p>
-                        С нами на площадке два аниматора, психолог, педагог и горячий чай. Ребенок не пропадет.
+                        С нами на площадке два аниматора и педагог, а в воскренье — психолог. У нас найдутся вода, салфетки, аптечка и горячий чай. Вы с ребёнком не пропадёте.
                     </p>
                     <h4>
                         Впрок
                     </h4>
                     <p>
-                        Игромарафон не пройдет бесследно. Мы выдаем участникам карту-путеводитель по правилам игр, оба дня с нами будет работать репортажный фотограф, а еще наш партнер — мультсериал “Новаторы” — обещал сувениры для самых ловких. Приходите и играйте!
+                        Игромарафон не пройдет бесследно. За час игр мы вместе с вами заполним карту-путеводитель по правилам, которая потом поможет вспомнить и выбрать подходящую игру вам или самим детям. А еще наш партнер — мультсериал “<a href="http://www.novatory.com/" target="_blank" class="link">Новаторы</a>” — обещал сувениры для самых играющих детей и родителей. Приходите и играйте!
                     </p>
                 </div>
             </div>
@@ -132,6 +132,10 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="center">
+                        <p>&nbsp;</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4484.714285823834!2d37.58544000000116!3d55.80439990916439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!1s0x0%3A0x79eb207f80dc8310!5e0!3m2!1sru!2sru!4v1387385207106" width="400" height="300" frameborder="0" style="border:0"></iframe>
+                    </div>
                     <div class="center">
                         <h3 id="hcard-Валентина" class="vcard">
                             <span class="tel">+7&nbsp;(916)&nbsp;655–96–73</span> <span class="fn n"><span class="given-name">Валентина</span></span>
@@ -149,11 +153,8 @@
             </div>
             <div class="footer">
                 <div class="row">
-                    <p class="col-md-6">
+                    <p class="col-md-6 col-md-offset-3">
                         Если вам хочется чего-то тихого и спокойного, а не прыжков в резиночки, возможно, вам подойдёт <a class="link" href="http://www.krasniy-klubok.ru/master_class/">мастер-класс по народной кукле.</a>
-                    </p>
-                    <p class="col-md-6">
-                        Вообще никуда не хочется ходить? Пройдите <a class="link" href="#">тест по подбору игр</a>.
                     </p>
                 </div>
             </div>
