Ссылка на гуглоформу

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 Приходите на игровой марафон 21 и 22 декабря с 12 до 19 часов. Он пройдёт на “<a href="http://flacon.ru/" target="_blank" class="link">Флаконе</a>” (м. Дмитровская), на площадке “Фабрики подарков” (ищите указатель на “Маркет”). Цена — 300 рублей, про&shy;дол&shy;жи&shy;тель&shy;ность сеанса — 1 час.
                             </p>
                             <h4 class="col-sm-12">
-                                Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="#">Заполните анкету</a> (занимает 10 минут времени) и получите скидку 100 рублей.
+                                Нам важно узнать о вас больше, чтобы улучшить нашу программу. <a class="link" href="https://docs.google.com/forms/d/1D6FaSAK_6tMQx9pcLS-G80Il2m9m3RzSOUQZ21BFZS4/viewform">Заполните анкету</a> (занимает 3 минуты времени) и получите скидку 100 рублей.
                             </h4>
                             <div class="col-sm-12">
                                 <script type="text/javascript">(function() {
